--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional photographer. Photoshoot in Dublin, Ireland. Photoshoot in Cork, Ireland.Portraits and family photos. Romantic photoshoots for couples">
+    <meta name="keywords" content="photogpher, photo, photoshoot, photossesion, Dublin, Cork, Ireland, romantic gift, family, Portraits">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
