--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Aleksandra Makarets - photogpher</title>
 </head>
 <body>
-    
+    <header>Header</header>
+    <main>Main</main>
+    <footer>Footer</footer>
 </body>
 </html>
