Add nav section and logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <title>Aleksandra Makarets - photogpher</title>
 </head>
 <body>
-    <header>Header</header>
+    <header>
+        <nav>
+            <div class="navbar">
+                <a href="#" class="logo">A.Makarets</a>
+            </div>
+        </nav>
+
+    </header>
     <main>Main</main>
     <footer>Footer</footer>
 </body>
