--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         <nav>
             <div class="navbar">
                 <a href="#" class="logo">A.Makarets</a>
+                <ul class="nav-links">
+                    <input type="checkbox" id="checkbox_toggle">
+                    <label for="checkbox_toggle" class="hamburger"><span class="hamburger-line"></span></label>
+                  <div class="menu">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service\s</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </div>
+                </ul>
             </div>
         </nav>
 
