Add link boxicons to head

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Professional photographer. Photoshoot in Dublin, Ireland. Photoshoot in Cork, Ireland.Portraits and family photos. Romantic photoshoots for couples">
     <meta name="keywords" content="photogpher, photo, photoshoot, photossesion, Dublin, Cork, Ireland, romantic gift, family, Portraits">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
@@ -24,7 +25,7 @@
                   <div class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Service\s</a></li>
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>
