--- a/index.html
+++ b/index.html
@@ -35,6 +35,54 @@
 
     </header>
     <main>Main</main>
-    <footer>Footer</footer>
+    <footer id="contact">
+        <div class="footer">
+            <div class="main">
+                <div class="list">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="new.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="servises.html">Services</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                    </ul>
+                </div>
+
+                <div class="list">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                </div>
+
+                <div class="list">
+                    <h4>Contact Info</h4>
+                    <ul>
+                        <li><a href="https://maps.app.goo.gl/aBGmZ8iCzPzRsph99" target="_blank">Dublin, Ireland</a></li>
+                        <li><a href="https://maps.app.goo.gl/EzZ716tKYeEmoThd7" target="_blank">Cork, Ireland</a></li>
+                        <li><a href="#">aleksandramakaretss@gmail.com</a></li>
+                        <li><a href="#">+353 (87) 718 3826</a></li>
+                    </ul>
+                </div>
+
+                <div class="list">
+                    <h4>Connect</h4>
+                    <div class="social">
+                        <a href="https://www.facebook.com/profile.php?id=100008072028898" target="_blank"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com/aleksandra_makarets/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
+                        <a href="https://www.linkedin.com/in/oleksandra-makarets-8a6067221/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class='bx bxl-youtube' ></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="end-text">
+            <p>Copyright &copy;2024 All rights reserved | Made by Aleksandra Makarets</p>
+        </div>
+    </footer>
 </body>
 </html>
