--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional photographer. Photoshoot in Dublin, Ireland. Photoshoot in Cork, Ireland.Portraits and family photos. Romantic photoshoots for couples">
-    <meta name="keywords" content="photogpher, photo, photoshoot, photossesion, Dublin, Cork, Ireland, romantic gift, family, Portraits">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <title>Aleksandra Makarets - photogpher</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Professional photographer. Photoshoot in Dublin, Ireland. Photoshoot in Cork, Ireland.Portraits and family photos. Romantic photoshoots for couples">
+        <meta name="keywords" content="photogpher, photo, photoshoot, photossesion, Dublin, Cork, Ireland, romantic gift, family, Portraits">
+        <link rel="stylesheet" href="assets/css/style copy.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+        <link rel="manifest" href="/site.webmanifest" />
+        <title>Aleksandra Makarets - photogpher</title>
+    </head>
 <body>
     <header>
         <nav>
@@ -34,26 +34,7 @@
         </nav>
 
     </header>
-    <main>
-        <section class="section-container" >
-            <div class="home-text">
-              <div class="slide">
-                  <span class="one">Hello</span>
-                  <span class="two">I'm</span>
-              </div>
-              <h1>Aleksandra Makarets</h1>
-              <h3>photographer</h3>
-              <p> I was trying to find a way how to capture moments which I experience in my life. I have found it in photography..<br> 
-                  You can watch the best moments of my personal life and the lives of other people in this block.</p>
-              <div class="botton">
-                  <a href="contact.html" target="_blank" class="btn">Hire me</a>
-                  <a href="gallery.html" target="_blank" class="btn"><span><i class='bx bx-play'></i></span>Watch My Work</a>
-              </div>
-          </div>
-          <div class="home-img">
-          </div>
-          </section>
-    </main>
+    <main>Main</main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
