Create second home section and add heading

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
           <div class="home-img">
           </div>
           </section>
+          <section>
+            <div class="num-title">
+                <h2><span>Some </span>Numbers</h2>
+            </div>
+          </section>
     </main>
     <footer id="contact">
         <div class="footer">
