Add class and id to second section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="home-img">
           </div>
           </section>
-          <section>
+          <section class="numbers" id="numbers">
             <div class="num-title">
                 <h2><span>Some </span>Numbers</h2>
             </div>
