Change class active in about section

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
                     <input type="checkbox" id="checkbox_toggle">
                     <label for="checkbox_toggle" class="hamburger"><span class="hamburger-line"></span></label>
                   <div class="menu">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
@@ -34,7 +34,7 @@
         </nav>
 
     </header>
-    <main>Main</main>
+    <main></main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
