--- a/about.html
+++ b/about.html
@@ -34,7 +34,13 @@
         </nav>
 
     </header>
-    <main></main>
+    <main>
+        <section class="about" id="about">
+            <div class="about-img">
+                <img src="assets/images/aleksandraaboutphoto.jpg" alt="Aleksandra Makarets">
+            </div>
+        </section>
+    </main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
