Add heading, paragraph and button to first about section

--- a/about.html
+++ b/about.html
@@ -39,6 +39,13 @@
             <div class="about-img">
                 <img src="assets/images/aleksandraaboutphoto.jpg" alt="Aleksandra Makarets">
             </div>
+            <div class="about-text">
+                <div class="about-hi">Hello everyone!</div>
+                <h2>About <span>Me</span></h2>
+                <h4>photogpher</h4>
+                <p>I specialize in lifestyle and travel lifestyle photography. I not only shoot in and around the streets of the city, but also in apartments, shops, parks – anywhere and everywhere my clients FEEL happy. Finding places that make people feel happy, as well as creating memories while we shoot. And that is what makes for great photos! My work in photography is a natural extension of my desire to tell stories. I’ve always been a nostalgic and a romantic, and I love that my work allows me to express those traits in such a meaningful way.</p>
+                <a href="contact.html" target="_blank" class="btn">Let's Talk</a>
+            </div>
         </section>
     </main>
     <footer id="contact">
