--- a/about.html
+++ b/about.html
@@ -47,6 +47,13 @@
                 <a href="contact.html" target="_blank" class="btn">Let's Talk</a>
             </div>
         </section>
+        <section class="directions">
+            <div class="about-text2">
+                <h4>My directions:</h4>
+                <p>The world without photography will be meaningless to us if there is no light and color, which opens up our minds and expresses passion.</p>
+            </div>
+
+        </section>
     </main>
     <footer id="contact">
         <div class="footer">
