Add image to secont about section

--- a/about.html
+++ b/about.html
@@ -52,7 +52,9 @@
                 <h4>My directions:</h4>
                 <p>The world without photography will be meaningless to us if there is no light and color, which opens up our minds and expresses passion.</p>
             </div>
-
+            <div class="about-img2">
+                <img src="assets/images/about-camera-image-2.webp" alt="Camera">
+            </div>
         </section>
     </main>
     <footer id="contact">
