--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Professional photographer. Photoshoot in Dublin, Ireland. Photoshoot in Cork, Ireland.Portraits and family photos. Romantic photoshoots for couples">
         <meta name="keywords" content="photogpher, photo, photoshoot, photossesion, Dublin, Cork, Ireland, romantic gift, family, Portraits">
-        <link rel="stylesheet" href="assets/css/style copy.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/about.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
