Create section in the servises page and add title

--- a/servises.html
+++ b/servises.html
@@ -35,7 +35,14 @@
         </nav>
 
     </header>
-    <main>Main</main>
+    <main>
+        <section class="servises" id="servises">
+            <div class="title">
+                <h2><span>My</span> Services</h2>
+            </div>
+
+        </section>
+    </main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
