Add images to section in servises page

--- a/servises.html
+++ b/servises.html
@@ -40,6 +40,37 @@
             <div class="title">
                 <h2><span>My</span> Services</h2>
             </div>
+            <div class="destination-content">
+                <div class="col-content">
+                    <img src="assets/images/home-gallery-4.servises.port.jpg" alt="Girl">
+                    <h5>Portraits</h5>
+                </div>
+
+                <div class="col-content">
+                    <img src="assets/images/createve.servises (1).jpg" alt="Girl">
+                    <h5>Creative</h5>
+                </div>
+
+                <div class="col-content">
+                    <img src="assets/images/family.servises.jpg" alt="Couplel">
+                    <h5>Family Memories</h5>
+                </div>
+
+                <div class="col-content">
+                    <img src="assets/images/love-coupleservis.jpg" alt="Couple">
+                    <h5>Love Story</h5>
+                </div>
+
+                <div class="col-content">
+                    <img src="assets/images/servisfation.jpg" alt="Girl">
+                    <h5>Fashion</h5>
+                </div>
+
+                <div class="col-content">
+                    <img src="assets/images/streetsevises.jpg" alt="Girl">
+                    <h5>Street photo</h5>
+                </div>
+            </div>
 
         </section>
     </main>
