--- a/servises.html
+++ b/servises.html
@@ -71,6 +71,9 @@
                     <h5>Street photo</h5>
                 </div>
             </div>
+            <div class="title">
+                <h2>Offers and <span>Prices</span></h2>
+            </div>
 
         </section>
     </main>
