--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                   <div class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="servises.html">Services</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>
