--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <div class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="servises.html">Services</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>
