--- a/servises.html
+++ b/servises.html
@@ -25,8 +25,8 @@
                     <label for="checkbox_toggle" class="hamburger"><span class="hamburger-line"></span></label>
                   <div class="menu">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="servises.html">Services</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>
