--- a/servises.html
+++ b/servises.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="servises.html">Services</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>
                 </ul>
