Create gallery section and add title

--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,12 @@
         </nav>
 
     </header>
-    <main>Main</main>
+    <main>
+        <section class="gallery">
+            <h2 class="title">Gall<span>e</span>ry</h2>
+
+        </section>
+    </main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
