Add gallery images with links

--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,52 @@
     <main>
         <section class="gallery">
             <h2 class="title">Gall<span>e</span>ry</h2>
+            <div class="gallery-list">
+                <a href="assets/images/gallery-3.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/gallery-3.jpg" alt="Notebook">
+                </a>
+                <a href="assets/images/gallery-5.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/gallery-5.jpg" alt="Stairs">
+                </a>
+                <a href="assets/images/home-gallery-10.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-10.jpg" alt="Girl">
+                </a>
+                <a href="assets/images/home-gallery-6.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-6.jpg" alt="Book and plant">
+                </a>
+                <a href="assets/images/gallery-8.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/gallery-8.jpg" alt="Hands">
+                </a>
+                <a href="assets/images/home-gallery-7.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-7.jpg" alt="Yellow cactus">
+                </a>
+                <a href="assets/images/home-gallery-9.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-9.jpg" alt="Ocean Book">
+                </a>
+                <a href="assets/images/home-gallery-4.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-4.jpg" alt="Girl">
+                </a>
+                <a href="assets/images/home-gallery-5.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/home-gallery-5.jpg" alt="Snowy moutains">
+                </a>
+                <a href="assets/images/gallery-1.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">See</div>
+                    <img src="assets/images/gallery-1.jpg" alt="Lemon">
+                </a>
+                <a href="assets/images/gallery-10.jpg" class="gallery-item">
+                    <div class="gallery-item-hover">View</div>
+                    <img src="assets/images/gallery-10.jpg" alt="plant">
+                </a>
+            </div>
 
         </section>
     </main>
