Create contact section and form tag

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,17 @@
         </nav>
 
     </header>
-    <main>Main</main>
+    <main>
+        <section class="contact">
+            <div class="contact-container">
+                <form action="">
+                    
+                </form>
+
+            </div>
+
+        </section>
+    </main>
     <footer id="contact">
         <div class="footer">
             <div class="main">
