--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,10 @@
         <section class="contact">
             <div class="contact-container">
                 <form action="">
-                    
+                    <div class="contact-left-title">
+                        <h2>Get in touch</h2>
+                        <hr>
+                    </div>
                 </form>
 
             </div>
