Create inputs elements

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,12 @@
                         <h2>Get in touch</h2>
                         <hr>
                     </div>
+                    <input type="hidden" name="access_key" value="a833d22f-fba0-4391-bde2-4f7d15dcda20">
+                    <input type="text" name="name" placeholder="Name*" class="contact-inputs" required>
+                    <input type="email" name="email" placeholder="E-mail*" class="contact-inputs" required>
+                    <input type="" name="phone" placeholder="Phone*" class="contact-inputs" required>
+                    <textarea name="message" id="" cols="46" rows="10" placeholder="Message" class="contact-inputs" required></textarea>
+                    <button type="submit">Submit</button>
                 </form>
 
             </div>
