Add image to contact page

--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
                     <textarea name="message" id="" cols="46" rows="10" placeholder="Message" class="contact-inputs" required></textarea>
                     <button type="submit">Submit</button>
                 </form>
+                <div class="contact-right">
+                    <img src="assets/images/about-camera-image-370x500.png" alt="Camera">
+                </div>
 
             </div>
 
