Add attributes to the form tag

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <main>
         <section class="contact">
             <div class="contact-container">
-                <form action="">
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
                     <div class="contact-left-title">
                         <h2>Get in touch</h2>
                         <hr>
