--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="servises.html">Services</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </div>
                 </ul>
             </div>
