--- a/gallery.html
+++ b/gallery.html
@@ -24,10 +24,10 @@
                     <input type="checkbox" id="checkbox_toggle">
                     <label for="checkbox_toggle" class="hamburger"><span class="hamburger-line"></span></label>
                   <div class="menu">
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="servises.html">Services</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="gallery.html" class="active">Gallery</a></li>
                     <li><a href="contact.html">Contact</a></li>
                   </div>
                 </ul>
