Add closing div tag

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <h3>2</h3>
                     <h4>Countries</h4>
                 </div>
+            </div>
           </section>
     </main>
     <footer id="contact">
