Change links in footer and remove comments

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
               <h1>Aleksandra Makarets</h1>
               <h3>photographer</h3>
-              <p> I was trying to find a way how to capture moments which I experience in my life. I have found it in photography..<br> 
+              <p> I was trying to find a way how to capture moments which I experience in my life. I have found it in photography.<br> 
                   You can watch the best moments of my personal life and the lives of other people in this block.</p>
               <div class="botton">
                   <a href="contact.html" target="_blank" class="btn">Hire me</a>
@@ -90,7 +90,7 @@
                 <div class="list">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="new.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="servises.html">Services</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
