--- a/servises.html
+++ b/servises.html
@@ -148,7 +148,7 @@
                 <div class="list">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="new.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="servises.html">Services</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
